--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               target="hidden_iframe" 
               onsubmit="formSubmitted()">
             <p class="text-center text-lg text-gray-800 font-bold bg-yellow-50 p-3 rounded-lg border border-yellow-200">
-                🚀 Join the Private Beta (Free for first 10 chapters)
+                🚀 Join the Private Beta 
             </p>
             
             <!-- Hidden Fields for Google Form validation (CRITICAL FIX) -->
